--- a/spec.yaml
+++ b/spec.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://api.omnistrate.cloud/2022-09-01-00/schema/service-spec-schema.json
-name: Hosted Omnigres Platform
+name: PostgreSQL Server # Service Plan Name
 deployment:
   hostedDeployment:
     AwsAccountId: "your-aws-account-id"
